--- a/getfedora.org/po/getfedora.pot
+++ b/getfedora.org/po/getfedora.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-11-22 12:42+0100\n"
+"POT-Creation-Date: 2016-11-22 15:31+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -562,8 +562,8 @@ msgstr ""
 msgid ""
 "<strong>Note that different Fedora Atomic Host media are subject to "
 "different levels of automatic testing.</strong> You can learn more about "
-"the Atomic project at <a href=\"%s\">projectatomic.io</a>, <a "
-"href=\"%s\">click here</a> to see the current test status."
+"the Atomic project at <a href=\"%s\">projectatomic.io</a>. <a "
+"href=\"%s\">Click here</a> to see the current test status."
 msgstr ""
 
 #: data/content/atomic/download/index.html:61
