--- a/boot.fedoraproject.org/po/en.po
+++ b/boot.fedoraproject.org/po/en.po
@@ -236,6 +236,10 @@ msgid "BFO is based on the work of the BKO - "
 msgstr "BFO is based on the work of the BKO - "
 
 #: data/content/index.html:13
+msgid "(link to wayback machine for historical reasons.)"
+msgstr "(link to wayback machine for historical reasons.)"
+
+#: data/content/index.html:13
 msgid "To download BFO please select BFO Download along the left side menu."
 msgstr "To download BFO please select BFO Download along the left side menu."
 
